fix(components/blogs): fix header alignment

--- a/src/components/blogs/index.scss
+++ b/src/components/blogs/index.scss
@@ -94,6 +94,7 @@
           font-size: 1.25em;
           font-weight: 400;
           line-height: 1.4;
+          text-align: center;
           cursor: pointer;
           &:hover {
             color: #78909C;
